# untitled2

./: .gitignore  CMakeLists.txt  Model.h  README.md  Vector.h  Vector.java  main.cpp  shapes.h
gui_src/: .gui_backup.h  CMakeLists.txt  gui.cpp  gui.h  gui_backup.h
imgui/: CMakeLists.txt  glad.c  glad.h  imconfig.h  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp  imstb_rectpack.h  imstb_textedit.h  imstb_truetype.h  khrplatform.h
imgui/backends/: CMakeLists.txt  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_opengl3_loader.h
src/: CMakeLists.txt
src/Gui_src/: .gui_backup.h  CMakeLists.txt  Gui.cpp  Gui.h
src/Light/: CMakeLists.txt  Light.cpp  Light.h
src/Material/: CMakeLists.txt  Material.cpp  Material.h
src/Scene/: CMakeLists.txt  Scene.cpp  Scene.h
src/Sphere/: CMakeLists.txt  Sphere.cpp  Sphere.h
src/Vector/: CMakeLists.txt  Vector.cpp  Vector.h
src/gui_src/: CMakeLists.txt  gui.cpp  gui.h
