cmake_minimum_required(VERSION 3.24)
project(untitled2)

set(CMAKE_CXX_STANDARD 17)
add_subdirectory(imgui)
add_subdirectory(imgui/backends)
add_subdirectory(src)
add_subdirectory(src/Light)
add_subdirectory(src/Scene)
add_subdirectory(src/gui_src)
#add_subdirectory(src/Sphere)

add_executable(untitled2 imgui/glad.c main.cpp )
target_link_libraries(untitled2 glfw GL dl pthread imgui backends gui Sphere Vector Scene)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)
